[gd_scene load_steps=2 format=3 uid="uid://dvcvr4pkqem8k"]

[ext_resource type="Script" uid="uid://cyhe0h1ecbxs4" path="res://main.gd" id="1_ig7tw"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_right = 144.0
offset_bottom = 137.0
grow_horizontal = 2

[node name="Username" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer/Username"]
layout_mode = 2
text = "Enter Username: "

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer/Username"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="IPContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="IPLabel" type="Label" parent="VBoxContainer/IPContainer"]
layout_mode = 2
text = "IP Adresse: "

[node name="IPInput" type="LineEdit" parent="VBoxContainer/IPContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Join" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
text = "JOIN"

[node name="Host" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
text = "HOST
"

[node name="ConnectionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ChatContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -21.5
offset_right = 80.0
offset_bottom = 21.5
grow_vertical = 2
alignment = 1

[node name="ChatDisplay" type="TextEdit" parent="ChatContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
wrap_mode = 1

[node name="ChatInputContainer" type="HBoxContainer" parent="ChatContainer"]
layout_mode = 2

[node name="ChatInput" type="LineEdit" parent="ChatContainer/ChatInputContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Write Text Here..."

[node name="ChatSend" type="Button" parent="ChatContainer/ChatInputContainer"]
layout_mode = 2
text = "SEND"
